# DefCrow

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
defcrow-cli/: Cargo.toml
defcrow-cli/src/: main.rs
docs/superpowers/plans/: 2026-06-06-defcrow-frontend.md  2026-06-06-defcrow-loader-scaffold.md  2026-06-06-defcrow-lolbin-output-extension.md  2026-06-06-defcrow-web-server.md  2026-06-11-defcrow-redesign.md
docs/superpowers/specs/: 2026-06-05-defcrow-rust-webui-design.md  2026-06-06-defcrow-redesign.md  2026-06-06-defcrow-script-lolbin-output.md  2026-06-11-appdomain-manager-hijacking.md  2026-06-11-html-smuggling-delivery.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  styles.css  test-setup.ts
frontend/src/api/: admin.ts  auth.ts  auth_keys.ts  client.ts  generate.ts  smuggler.ts  stage.ts
frontend/src/components/: AppDomainConfig.tsx  BuildConsole.tsx  CrowLogo.tsx  DeliveryCard.tsx  EvasionSection.tsx  ExecHint.tsx  Header.tsx  OpsecFeatures.tsx  OutputSection.tsx  PayloadSection.tsx  PeMetadata.tsx  ProtectedRoute.tsx  StageTransferSection.tsx
frontend/src/data/: designData.ts
loader-scaffold/: Cargo.toml
loader-scaffold/src/: lib.rs  stager.rs
loader-scaffold/src/bypass/: amsi_hwbp.rs  etw_hwbp.rs  mod.rs
loader-scaffold/src/crypto/: mod.rs
loader-scaffold/src/evasion/: anti_debug.rs  mod.rs  module_stomp.rs  pe_cloak.rs  sleep_mask.rs  stack_spoof.rs  syscalls.rs  unhook.rs
loader-scaffold/src/inject/: appdomain.rs  exec.rs  mod.rs  ppid_spoof.rs  threadless.rs
loader-scaffold/src/resolve/: api_hash.rs  mod.rs
loader-scaffold/src/sandbox/: domain.rs  mod.rs  usercheck.rs
template-engine/: Cargo.toml
template-engine/examples/: audit_all_loaders.rs  full_compile_test.rs  test_beacon_gen.rs  test_compress.rs
template-engine/src/: lib.rs
template-engine/templates/: appdomain.config.tera  appdomain.rs.tera  binary.rs.tera  dll.rs.tera  injector.rs.tera
template-engine/tests/: e2e.rs  script_render.rs
web-server/: Cargo.toml
web-server/src/: config.rs  lib.rs  main.rs  state.rs
web-server/src/api/: admin.rs  auth.rs  auth_keys.rs  cleanup.rs  download.rs  generate.rs  jobs.rs  mod.rs  smuggler.rs  stage.rs
web-server/src/auth/: discord.rs  keystore.rs  mod.rs  settings.rs  users.rs
web-server/src/builder/: csharp_runner.rs  job_store.rs  mod.rs  pe_sign.rs  rustc_runner.rs  scaffold.rs
web-server/src/middleware/: auth.rs  mod.rs  require_admin.rs
web-server/src/ws/: progress.rs
web-server/tests/: api_tests.rs  auth_api_tests.rs
(+47 files in other folders)
