[package]
name = "loader-scaffold"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_NetworkManagement_NetManagement",
    "Win32_System_Com",
    "Win32_System_WindowsProgramming",
    "Win32_System_Kernel",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_ClrHosting",
    "Win32_Networking_WinHttp",
] }

[dependencies]
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
chacha20poly1305 = "0.10"
rand = { version = "0.8", features = ["getrandom"] }
