[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web-server"
path = "src/main.rs"

[lib]
name = "web_server"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
hmac    = "0.12"
sha2    = "0.10"
base64  = "0.22"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
uuid = { version = "1", features = ["v4"] }
tower = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["io"] }
template-engine = { path = "../template-engine" }
which = "6"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
axum-test = "14"
tokio-test = "0.4"
tempfile = "3"
